<resources>
    <string name="app_name">Quiz App</string>
    <string name="play_text">Play</string>
    <string name="home_text">Home</string>
    <string name="options_text">Settings</string>
    <string name="category_text">Categories</string>
    <string name="todos_text">All</string>
    <string name="pistas_text">Hints</string>
    <string name="videogames_history_text">Videogames History</string>
    <string name="mario_bros_text">Mario Bros</string>
    <string name="spiderman_text">Spiderman</string>
    <string name="cars_text">Cars</string>
    <string name="dragon_ball_text">Dragon ball</string>
    <string name="terminal_montage_text">Terminal Montage</string>
    <string name="numero_de_preguntas_text">Number of questions:</string>
    <string name="numero_de_preguntas_text_short">No. of questions:</string>
    <string name="dificultad_text">Difficulty</string>
    <string name="random_text">Random</string>

    <string name="v1">What was the first video game created in history?</string>
    <string name="v2">What was the first character created in the history of video games?</string>
    <string name="v3">What is the best-selling console in the history of video games?</string>
    <string name="v4">What main characters appeared together in a video game about the Olympic games?</string>
    <string name="v5">Which console was the least sold in history?</string>
    <string name="v6">What console tried to innovate in the world of augmented reality and failed in the attempt?</string>
    <string name="v7">What comic book company makes a union with the "Capcom" company for a video game?</string>
    <string name="v8">What company owns the “PlayStation” console?</string>
    <string name="v9">What company owns the “Xbox” console?</string>
    <string name="v10">How many Bits was the first Pacman game?</string>

    <string name="m1">What is the name of Mario\'s brother?</string>
    <string name="m2">What is the name of Mario\'s faithful companion?</string>
    <string name="m3">What is the name of Mario\'s arch enemy?</string>
    <string name="m4">What is the name of Mario\'s girlfriend?</string>
    <string name="m5">What is the name of the character that Mario helps save the galaxy?</string>
    <string name="m6">What is the best sports game Mario has?</string>
    <string name="m7">What is the name of Princess Peach\'s kingdom?</string>
    <string name="m8">What is the name of Princess Daisy\'s kingdom?</string>
    <string name="m9">What is the name of the dog with a chain that appears in the Mario games?</string>
    <string name="m10">What is the name of the first Mario Bros game in 3D?</string>

    <string name="s1">What is the true identity of spider man?</string>
    <string name="s2">What is the name of the enemy of Spider-Man who controls the sand?</string>
    <string name="s3">Which Spider-Man enemy is a symbiote?</string>
    <string name="s4">Which Spider-Man friend uses 2 guns and is immortal?</string>
    <string name="s5">Which supervillain is romantically involved with Spider-Man?</string>
    <string name="s6">What is the name of Peter Parker\'s uncle?</string>
    <string name="s7">Which Spider-Man enemy controls the electricity?</string>
    <string name="s8">What is the name of the son of the green goblin?</string>
    <string name="s9">What is the name of the main character in the movie Spiderman into the spider verse?</string>
    <string name="s10">What is the name of the enemy of Spider-Man who uses mechanical arms?</string>

    <string name="c1">What is the name of the character that says CUCHAU?</string>
    <string name="c2">What\'s the name of McQueen\'s best friend?</string>
    <string name="c3">What\'s the name of McQueen\'s girlfriend?</string>
    <string name="c4">What\'s the name of a green racing car that is McQueen\'s enemy?</string>
    <string name="c5">What is the name of McQueen\'s coach?</string>
    <string name="c6">What is the name of the trailer that is McQueen\'s friend?</string>
    <string name="c7">What\'s the name of the Cars cup?</string>
    <string name="c8">How many Cars movies are there?</string>
    <string name="c9">In which Cars movie does Mate go spy?</string>
    <string name="c10">Who says the phrase "To the pits"?</string>

    <string name="d1">Who is the main character?</string>
    <string name="d2">Who is Goku\'s rival?</string>
    <string name="d3">What is the name of Goku\'s grandfather?</string>
    <string name="d4">What is the name of Goku\'s eldest son?</string>
    <string name="d5">What is the name of the legendary saiyan?</string>
    <string name="d6">Which enemy of Goku is the leader of the galactic empire?</string>
    <string name="d7">What is the name of Goku\'s youngest son?</string>
    <string name="d8">What is the name of Vegeta\'s son?</string>
    <string name="d9">What is the name of the dragon that comes out gathering the dragon balls?</string>
    <string name="d10">Who is the prince of the saiyan?</string>

    <string name="t1">What character says the phrase "POYO"?</string>
    <string name="t2">What color of Yoshi is locked up unfairly?</string>
    <string name="t3">Which Yoshi wears sunglasses?</string>
    <string name="t4">Which pokemon wins the baby battle royale?</string>
    <string name="t5">Who has the speed demon inside?</string>
    <string name="t6">What psalm does Kirbo say to do an exorcism?</string>
    <string name="t7">What character donates to the poor at Christmas?</string>
    <string name="t8">What character enters haunted mansion?</string>
    <string name="t9">Who is the leader of the guardians of time?</string>
    <string name="t10">How many Kirbos appear in the Kirby Super Star video?</string>

    <string name="easy_text">Easy</string>
    <string name="medium_text">Medium</string>
    <string name="hard_text">Hard</string>
    <string name="save_text">Save Changes</string>
    <string name="previous_text">Previous</string>
    <string name="next_text">Next</string>
    <string name="correct_text">Correct</string>
    <string name="incorrect_text">Incorrect</string>
    <string name="no_hints">No hints available</string>
    <string name="hints_text">Hints</string>
    <string name="question_already_answered">Question Already Answered</string>
    <string name="no_saving_options">Changes not applied, select at least one category</string>
    <string name="saving_options">Changes applied</string>
    <string name="score_text">Score</string>
    <string name="game_text">Game</string>
    <string name="return_home_text">Return to Home</string>
    <string name="return_scores_text">Return to Global Scores</string>
    <string name="correct_questions_score">1) Correct Answers Score</string>
    <string name="hints_penalization_text">2) Hints Penalization</string>
    <string name="final_score_text">Final Score</string>
    <string name="total_score_text">Total Score</string>
    <string name="leave_game_text">Are you sure to leave the current game?</string>
    <string name="alert_text">Warning</string>
    <string name="leave_text">Leave</string>
    <string name="continue_text">Continue</string>
    <string name="current_game_text">Current Game Found</string>
    <string name="continue_or_new_text">You want to continue or play another game? Playing another game will cause to lose all data of the old one</string>
    <string name="play_another_game_text">Play another game</string>
    <string name="update_settings_warning">Update the settings will cause to lost all current game data. You want to continue?</string>
    <string name="cancel_text">Cancel</string>
    <string name="hints_enabled">Hints Enabled</string>
    <string name="date_text">Date</string>
    <string name="las_5_mejores_y_m_s_antiguas">Best and oldest 5 scores</string>
    <string name="profile_needed">You need to select a profile to view your game settings</string>
    <string name="profile_needed_game">You need to select a profile to play</string>
    <string name="games_completed_with_hints">Games Completed Using hints</string>
    <string name="games_played">Games Played</string>
    <string name="name_text">Name</string>
    <string name="new_profile">New Profile</string>
    <string name="create">Create</string>
    <string name="profile_created">Profile Created</string>
    <string name="profile_deleted">Profile Deleted</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="delete_profile_content">Are you sure you want to delete this profile?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="order_by">Order By</string>

    <string-array name="globalOrderBy">
        <item>Score</item>
        <item>Games Played</item>
    </string-array>
    <string-array name="profileOrderBy">
        <item>Date</item>
        <item>Score</item>
    </string-array>
</resources>
