<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".GameCompletedActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="369dp"
      android:paddingTop="30dp">

      <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/primary_purple"
        android:fontFamily="@font/gloucester_mt"
        android:padding="60dp"
        android:text="@string/score_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp" />

      <ImageView
        android:id="@+id/score_image"
        android:layout_width="182dp"
        android:layout_height="134dp"
        android:layout_gravity="top|center"
        android:src="@drawable/gato_bad_score"
        tools:ignore="ContentDescription" />
    </FrameLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="30dp"
      android:orientation="vertical">

      <TextView
        android:id="@+id/correct_questions_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/gloucester_mt"
        android:text="@string/correct_questions_score"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp" />

      <TextView
        android:id="@+id/hints_penalization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/gloucester_mt"
        android:text="@string/hints_penalization_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp" />

      <TextView
        android:id="@+id/final_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/gloucester_mt"
        android:text="@string/final_score_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp" />
    </LinearLayout>

    <Button
      android:id="@+id/home_button"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginHorizontal="70dp"
      android:layout_marginBottom="30dp"
      android:layout_weight="2"
      android:backgroundTint="@color/primary_blue"
      android:fontFamily="@font/gloucester_mt"
      android:padding="10dp"
      android:text="@string/return_home_text"
      android:textSize="24sp" />
  </LinearLayout>

</ScrollView>